fixed header overlapping on landscape version of mobile site

--- a/style.css
+++ b/style.css
@@ -162,6 +162,8 @@ td {
     }
 
     .content {
+        position: absolute;
+        top: 150px;
         font-size: 110%;
         width: 80vw;
         padding-top: 1.5vh;
